# SignalAssistant

./: CMakeLists.txt  README.md  TASKS.md  guitar_pi_qt_qml_ui_scaffold_handoff_ready.cpp  guitar_pi_todo_breadcrumbs_patch.txt
cmake/: toolchain-rpi-aarch64.cmake
docs/: Note Detection.md  latency-log.md
qml/: Main.qml
qml/components/: LatencyBadge.qml  Meter.qml  NavButton.qml  TuningPanel.qml
qml/pages/: HomePage.qml  RecordPage.qml  RigPage.qml  SettingsPage.qml  TabPage.qml
scripts/: install_deps_pi.sh  install_low_latency_service.sh  setup_low_latency.sh
src/: AppController.cpp  AppController.h  DetectionTuningController.cpp  DetectionTuningController.h  NoteDetectionConfig.cpp  NoteDetectionConfig.h  NoteDetectionStore.cpp  NoteDetectionStore.h  RecordedSessionPlayer.cpp  RecordedSessionPlayer.h  RunSessionOptions.h  SessionLogger.cpp  SessionLogger.h  StringTracker.cpp  StringTracker.h  StringTrackerParams.h  TabEngine.cpp  TabEngine.h  TabEngineBridge.cpp  TabEngineBridge.h  TabPagePreview.cpp  main.cpp  tab_module.cpp  util.cpp  util.h
src/audio/: AudioEngine.cpp  AudioEngine.h  CarlaClient.cpp  CarlaClient.h  HexAudioClient.h  HexJackClient.cpp  HexJackClient.h  JackMonitorSink.cpp  JackMonitorSink.h
